--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Oxygen:wght@300;400;700&family=Playfair+Display:wght@400;500;600;700&family=Quattrocento:wght@700&family=Rufina:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Oxygen:wght@300;400;700&family=Playfair+Display:wght@400;500;600;700&family=Rufina:wght@400;700&display=swap');
 
 * {
   margin: 0;
@@ -13,7 +13,6 @@ html {
 /* font-family: 'DM Sans', sans-serif;
 font-family: 'Oxygen', sans-serif;
 font-family: 'Playfair Display', serif;
-font-family: 'Quattrocento', serif;
 font-family: 'Rufina', serif; */
 
 body {
@@ -30,7 +29,6 @@ ul {
 li {
   text-align: start;
 }
-
 
 a,
 a:hover,
